Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-33542

Array.indexOf() does not work for QStringList

    XMLWordPrintable

Details

    • 6d4d98bc593289d4418a1ab83f00dca0608da23e

    Description

      My C++ code looks like this:

      QStringList list() {
      return QStringList() << "a" << "b" << "c";
      }

      When I access this list from JS I can print the list and iterate over it. However list().indexOf("b") always returns -1.

      Expected result: 1

      This used to work in Qt 5.1.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            liaqi Liang Qi
            ablasche Alex Blasche
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes